--- a/contact.html
+++ b/contact.html
@@ -89,23 +89,23 @@
             <img src="images/address.png" class="contact-icon" alt="" />
             <div class="details">
               <h4>Address</h4>
-              <p>28 Neon Tower, New York City, USA</p>
+              <p>1st ave,festac,Lagos</p>
             </div>
           </div>
           <div class="info-box">
             <img src="images/email.png" class="contact-icon" alt="" />
             <div class="details">
               <h4>Email</h4>
-              <a href="mailto:anyone@example.com">anyone@example.com</a>
-              <a href="mailto:anyone@example.com">anyone@example.com</a>
+              <a href="mailto:>sam_ug@yahoo.com">sam_ug@yahoo.com</a>
+              <a href="mailto:>sam_ug@yahoo.com">>sam_ug@yahoo.com</a>
             </div>
           </div>
           <div class="info-box">
             <img src="images/call.png" class="contact-icon" alt="" />
             <div class="details">
               <h4>Call</h4>
-              <a href="tel:+19785555555">+1 978 555 5555</a>
-              <a href="tel:+19784444444">+1 978 555 4444</a>
+              <a href="tel:+2349166215185">+2349166215185</a>
+              <a href="tel:+2349166215185">+2349166215185</a>
             </div>
           </div>
         </div>
