--- a/services.html
+++ b/services.html
@@ -60,7 +60,7 @@
           <div class="icon">
             <img src="images/001.png" alt="" />
           </div>
-          <h2>Design</h2>
+          <h2>Web Design and Development</h2>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum omnis
           nemo sapiente in quidem sed dolores cumque! Ut, est aliquid!
         </div>
@@ -68,7 +68,7 @@
           <div class="icon">
             <img src="images/002.png" alt="" />
           </div>
-          <h2>Development</h2>
+          <h2>Product Design</h2>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum omnis
           nemo sapiente in quidem sed dolores cumque! Ut, est aliquid!
         </div>
@@ -76,7 +76,7 @@
           <div class="icon">
             <img src="images/003.png" alt="" />
           </div>
-          <h2>SEO</h2>
+          <h2>Creative DEsign</h2>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum omnis
           nemo sapiente in quidem sed dolores cumque! Ut, est aliquid!
         </div>
@@ -92,7 +92,7 @@
           <div class="icon">
             <img src="images/005.png" alt="" />
           </div>
-          <h2>App Development</h2>
+          <h2>Mobile App Development(ios/android)</h2>
           Lorem ipsum, dolor sit amet consectetur adipisicing elit. Harum omnis
           nemo sapiente in quidem sed dolores cumque! Ut, est aliquid!
         </div>
